--- a/IntSchool.Sharp.Core/IntSchool.Sharp.Core.csproj
+++ b/IntSchool.Sharp.Core/IntSchool.Sharp.Core.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="RestSharp" Version="112.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Raw\" />
+    </ItemGroup>
+
 </Project>
