Add student sniffer, Supporting async calling, fix api bugs

--- a/IntCopilot.Barker.Client/appsettings.json
+++ b/IntCopilot.Barker.Client/appsettings.json
@@ -16,6 +16,16 @@
         "BarkTokens" : [
           "tUK7WFRxB8S3aSanvfrQG3"
         ]
+      },
+      {
+        "Description": "Monitor Student 10616 (Today)",
+        "StudentId": "10616",
+        "SchoolYearId": "42",
+        "TimeWindow": "Today",
+        "BarkTokens" : [
+          "prUcfT3PZQV4RYCDixrcLT",
+          "t2zVxTHL2RdD53Pf47iBk7"
+        ]
       }
     ]
   }
