Adding database saving function

--- a/IntCopilot.DataAccess.Postgres/IntCopilot.DataAccess.Postgres.csproj
+++ b/IntCopilot.DataAccess.Postgres/IntCopilot.DataAccess.Postgres.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Npgsql" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IntCopilot.Shared\IntCopilot.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
